--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
   charcode: ^1.3.1
   collection: ^1.15.0
   flutter_quill: ^5.0.1
-  markdown:
-    git: https://github.com/Lawliet18/markdown
+  markdown: ^6.0.0
 
 dev_dependencies:
   flutter_test:
